Header z-index fixed

--- a/core/templates/core/password/password_reset_form.html
+++ b/core/templates/core/password/password_reset_form.html
@@ -2,14 +2,25 @@
 <head>
     <title>Solicitar Redefinição de Senha</title>
     <link rel="stylesheet" href="{% static 'core/dist/css/main.css' %}" />
+    <style>
+        #id_email {
+            width: 85%;
+        }
+    </style>
 </head>
-<body class="bg-gray-100">
-    <div class="container mx-auto pt-20">
+<body class="flex justify-center bg-gray-100">
+    <div class="flex flex-col justify-center pt-20">
         <h1 class="text-2xl font-semibold mb-4">Solicitar Redefinição de Senha</h1>
         <form method="post" class="space-y-4">
             {% csrf_token %}
-            {{form}}
-            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Enviar</button>
+            <div class="">
+                {{form}}
+            </div>
+            <div class="flex justify-center">
+                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">
+                Enviar
+                </button>
+            </div>
         </form>
     </div>
 </body>
