--- a/communication/templates/communication/alert/list.html
+++ b/communication/templates/communication/alert/list.html
@@ -10,10 +10,23 @@
       icons: {
         student: "🧑‍🎓",
         staff: "🧑‍💼",
-        abc: "?",
         teacher: "🧑‍🏫",
         repair: "🔧",
         cleanup: "🧹",
+        other: "👍",
+      },
+      translations: {
+        student: "Aluno",
+        staff: "Funcionário",
+        teacher: "Professor",
+        repair: "Conserto",
+        cleanup: "Limpeza",
+        other: "Outros",
+      },
+      imgShow: false,
+      show(img) {
+        this.imgUrl = img;
+        this.imgShow = true;
       },
 
       fillIn(el) {
@@ -27,9 +40,33 @@
 </script>
 {% endblock %} {% block content %}
 <main class="flex-1 p-5 md:mx-16">
-  <h1 class="mb-3 font-sans text-3xl font-bold text-color-primary">Alertas</h1>
+  <h1 class="mb-12 font-sans text-3xl font-bold text-color-primary">Alertas</h1>
 
-  <section class="mt-10 divide-gray-600" x-data="alert">
+  <section x-data="alert">
+    <section class="dialog-backdrop z-10" x-show="imgShow">
+      <div class="dialog w-1/2">
+        <header>
+          <span></span>
+          <button @click="imgShow = false">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="h-6 w-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M6 18L18 6M6 6l12 12"
+              />
+            </svg>
+          </button>
+        </header>
+        <img :src="imgUrl" alt="alert image" class="w-full rounded-2xl mt-2" />
+      </div>
+    </section>
     <ul class="flex flex-col gap-5">
       {% for alert in alerts %}
       <div
@@ -40,6 +77,7 @@
           <div class="flex items-center gap-3">
             <span
               x-text="icons['{{ alert.tag }}']"
+              :data-tippy-content="translations['{{ alert.tag }}']"
               class="text-[2.5rem]"
             ></span>
             <div>
@@ -52,8 +90,7 @@
                 </span>
               </h2>
               <p>
-                <span>{{ alert.tag }}</span>
-                <span>{{ alert.date }}</span>
+                <span class="text-slate-500">{{ alert.date }}</span>
               </p>
               <p>{{ alert.description }}</p>
             </div>
@@ -82,6 +119,12 @@
           class="origin-top rounded-b-3xl bg-gray-200 p-5 transition-all"
           :class="details || 'scale-y-0 h-0 py-0'"
         >
+          <button
+            class="alt"
+            @click="show(`{% url 'img' 'alerts' alert.pk %}`)"
+          >
+            Imagem
+          </button>
           <form action="">
             <div class="flex flex-col gap-4 md:flex-row md:gap-8 md:pr-16">
               <div class="flex flex-1 flex-col gap-1">
