--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -27,7 +27,7 @@
         Bem {% if user.member.gender == 'F' %}vinda{% else %}vindo{% endif %}, {{ user.username.split.0.title }}!
       </p>
     </div>
-    <span class="text-sm md:ml-1 md:mr-3 md:text-base md:text-gray-400">
+    <span class="hidden sm:block text-sm md:ml-1 md:mr-3 md:text-base md:text-gray-400">
       {% if user|has_role:'admin' %}
         Administrador
       {% elif user|has_role:'coordinator' %}
