--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -2,7 +2,7 @@
 <nav
   id="navbar"
   class="sticky left-0 top-0 flex flex-col justify-between overflow-y-auto rounded-br-xl bg-color-primary py-5 text-slate-100 transition-all"
-  :class="open ? 'w-96 px-5' : 'w-0 px-0'"
+  :class="open ? 'w-[34rem] md:w-96 px-5' : 'w-0 px-0'"
 >
   <div>
     <header class="ml-3 flex items-center justify-start py-2">
