reset_password atualization

--- a/core/templates/core/password/password_reset_form.html
+++ b/core/templates/core/password/password_reset_form.html
@@ -2,15 +2,28 @@
 <head>
     <title>Solicitar Redefinição de Senha</title>
     <link rel="stylesheet" href="{% static 'core/dist/css/main.css' %}" />
+    <style>
+      #id_email{
+        width: 87%;
+      }
+      label{
+        color: transparent;
+        user-select: none;
+      }
+
+
+    </style>
 </head>
-<body class="bg-gray-100">
-    <div class="container mx-auto pt-20">
-        <h1 class="text-2xl font-semibold mb-4">Solicitar Redefinição de Senha</h1>
-        <form method="post" class="space-y-4">
-            {% csrf_token %}
-            {{form}}
-            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Enviar</button>
-        </form>
-    </div>
+<body class="flex justify-center items-center bg-gray-100">
+  <form method="post" class="space-y-4">
+    <h1 class="text-2xl font-semibold mb-4">Solicitar Redefinição de Senha</h1>
+      {% csrf_token %}
+      <span>Email Institucional</span> 
+      {{form}}
+    </br>
+    <div class="flex justify-center mr-[10%]">
+      <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Enviar</button>  
+    </div> 
+  </form>
 </body>
 </html>
