--- a/core/templates/core/password/password_reset_done.html
+++ b/core/templates/core/password/password_reset_done.html
@@ -3,8 +3,8 @@
     <title>E-mail Enviado</title>
     <link rel="stylesheet" href="{% static 'core/dist/css/main.css' %}" />
 </head>
-<body class="bg-gray-100">
-    <div class="container mx-auto pt-20">
+<body class="flex justify-center bg-gray-100">
+    <div class="pt-20">
         <h1 class="text-2xl font-semibold mb-4">E-mail Enviado</h1>
         <p>Um e-mail com as instruções para redefinir sua senha foi enviado para o endereço fornecido.</p>
     </div>
