Added fix button for schedules

--- a/communication/templates/communication/announcements.html
+++ b/communication/templates/communication/announcements.html
@@ -227,7 +227,7 @@
           </div>
           <div class="flex items-center gap-1 text-lg font-normal">
             <label>Categoria:</label>
-            <select name="category" id="sl-category">
+            <select name="category" id="sl-category" required>
               <option value="r">Reunião</option>
               <option value="p">Palestra</option>
               <option value="a">Reposição</option>
