--- a/management/templates/management/schedules.html
+++ b/management/templates/management/schedules.html
@@ -68,6 +68,25 @@
           })
         );
       },
+
+      exclude() {
+        const csrfToken = document.cookie.slice(
+          document.cookie.indexOf("=") + 1
+        );
+
+        fetch("{% url 'fix_schedule' %}", {
+          method: "POST",
+          headers: { "X-CSRFToken": csrfToken },
+          body: JSON.stringify({
+            classroom: Number(document.URL.split("/").at(-2)),
+            day: this.programmingDay,
+            time: this.programmingTime,
+          }),
+        })
+        // .then(res => console.log(res))
+        .then((res) => res.redirected && location.replace(res.url));
+      },
+
       programmingTime: 1,
       programmingTimeShow: "",
       programmingDay: 1,
@@ -101,7 +120,9 @@
       <tbody>
         {% for t in time_table %}
         <tr>
-          <td class="mr-10 rounded-xl bg-color-primary-dimm text-white">
+          <td
+            class="mr-10 rounded-xl bg-color-primary-dimm text-base text-white"
+          >
             {{ t }}
           </td>
           <td></td>
@@ -115,8 +136,26 @@
     </table>
 
     <section class="rounded-xl bg-zinc-300 p-5">
-      <h2 class="mb-1 ml-1 mt-1 text-2xl font-semibold">
-        {% if user|has_role:'admin' %} Editar aula {% else %} Detalhes {% endif %}
+      <h2 class="mb-1 ml-1 mt-1 flex justify-between text-2xl font-semibold">
+        {% if user|has_role:'admin' %}
+        <span>Editar aula</span>
+        <button @click="exclude()" data-tippy-content="Apagar" class="hover:text-red-600">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="h-6 w-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
+            />
+          </svg>
+        </button>
+        {% else %} Detalhes {% endif %}
       </h2>
       <form
         action="{% url 'schedules' classroom.pk %}"
