--- a/core/static/core/css/schedule.css
+++ b/core/static/core/css/schedule.css
@@ -11,5 +11,5 @@ tbody tr:last-child td {
 }
 
 tbody tr td {
-  @apply border-0 bg-slate-100 px-5 py-2 cursor-pointer;
+  @apply bg-slate-100 border-0 px-3 py-2 cursor-pointer text-sm text-center;
 }
