--- a/core/templates/core/enroll.html
+++ b/core/templates/core/enroll.html
@@ -129,6 +129,7 @@
               name="birthdate"
               id="dt-birthdate"
               value="{{ birthdate|date:'Y-m-d' }}"
+              min="1900-01-01"
               :max="new Date().toISOString().split('T')[0]"
               required
             />
@@ -447,7 +448,7 @@
             </div>
           </div>
         </template>
-        <button type="submit" class="btn">Enviar</button>
+        <button type="submit">Enviar</button>
       </article>
       <!-- Show instead a group option, class, subject etc. -->
     </section>
