--- a/core/templates/core/turmaprofessores.html
+++ b/core/templates/core/turmaprofessores.html
@@ -1,4 +1,6 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
+
+<!--Não está finalizado-->
 <script defer src="{% static 'core/js/turmaprofessores.js' %}"></script>
 <link rel="stylesheet" href="{% static 'core/css/turmaprofessores.css' %}" />
 
@@ -54,8 +56,6 @@
         >
         <input
           type="date"
-          :min="new Date().toISOString().split('T')[0]"
-          :value="new Date().toISOString().split('T')[0]"
           class="w-full rounded-full text-center"
           id="dataAtual"
         />
@@ -85,12 +85,19 @@
           </svg>          
           <a href="#option-2" @click="selected = 'option-2'" class="hidden text-color-primary md:block">Prova | Atividade</a>
         </li>
-        <!-- Option Plano de Ensino -->
+        <!-- Option Reposições -->
         <li class="px-4 py-2 flex items-center" :class="{ 'border-b-2 border-color-primary': selected === 'option-3' }">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-color-primary" @click="selected = 'option-3'">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 6.375c0 2.278-3.694 4.125-8.25 4.125S3.75 8.653 3.75 6.375m16.5 0c0-2.278-3.694-4.125-8.25-4.125S3.75 4.097 3.75 6.375m16.5 0v11.25c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125V6.375m16.5 0v3.75m-16.5-3.75v3.75m16.5 0v3.75C20.25 16.153 16.556 18 12 18s-8.25-1.847-8.25-4.125v-3.75m16.5 0c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125" />
+          </svg>          
+          <a href="#option-3" @click="selected = 'option-3'" class="hidden text-color-primary md:block">Reposições</a>
+        </li>
+        <!-- Option Plano de Ensino -->
+        <li class="px-4 py-2 flex items-center" :class="{ 'border-b-2 border-color-primary': selected === 'option-4' }">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-color-primary" @click="selected = 'option-4'">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4.26 10.147a60.436 60.436 0 00-.491 6.347A48.627 48.627 0 0112 20.904a48.627 48.627 0 018.232-4.41 60.46 60.46 0 00-.491-6.347m-15.482 0a50.57 50.57 0 00-2.658-.813A59.905 59.905 0 0112 3.493a59.902 59.902 0 0110.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.697 50.697 0 0112 13.489a50.702 50.702 0 017.74-3.342M6.75 15a.75.75 0 100-1.5.75.75 0 000 1.5zm0 0v-3.675A55.378 55.378 0 0112 8.443m-7.007 11.55A5.981 5.981 0 006.75 15.75v-1.5" />
           </svg>          
-          <a href="#option-3" @click="selected = 'option-3'" class="hidden text-color-primary md:block">Plano de Ensino</a>
+          <a href="#option-4" @click="selected = 'option-4'" class="hidden text-color-primary md:block">Plano de Ensino</a>
         </li>
       </ul>
     </nav>
@@ -241,17 +248,14 @@
       </button>
       </div>
       
-
-      <!-- Inicio Caixa de Dialogo -->
       <div
       :class="createDialog ? 'flex' : 'hidden'"
       class="fixed inset-0 items-center justify-center bg-black bg-opacity-25"
     >
-    
       <div
         class="h-[90%] w-[90%] rounded-3xl bg-white pb-10 m-4 md:h-[600px] md:w-[600px]"
       >
-        <header class="mx-6 mt-8 flex justify-between text-3xl font-bold">
+        <header class="mx-10 mt-8 flex justify-between text-3xl font-bold">
           <h2 class="text-color-primary">Marcar Avaliações</h2>
           <div>
             <button
@@ -275,7 +279,7 @@
             </button>
           </div>
         </header>
-        <section class="flex flex-col gap-3 p-6">
+        <section class="flex flex-col gap-3 p-10">
             <div class="flex flex-col text-lg font-normal">
               <label>Bimestre:</label>
               <select name="Bimestre" class="w-64 h-10 rounded-full text-center mb-1">
@@ -285,7 +289,7 @@
                 <option>4ºBimestre</option>
               </select>
             </div>
-            <div class="flex flex-row gap-1">
+            <div class="flex flex-row">
             <div class="flex flex-col text-lg w-full font-normal">
               <label>Peso:</label>
               <select name="Peso" class="w-36 h-10 rounded-full text-center">
@@ -303,15 +307,15 @@
               </select>
             </div>
           </div>
-          <div class="flex flex-col text-lg font-normal">
-            <label>Título:</label>
+          <div class="flex flex-col px-12 text-lg font-normal">
+            <label>Titulo:</label>
             <input type="text" class="h-10" name="title" required />
           </div>
           <div
-            class="flex items-center gap-1 text-lg font-normal"
+            class="flex items-center gap-1 px-12 text-lg font-normal"
             x-data="{ anexoMencao: 'Anexo' }"
           >
-            <label>Data da Prova:</label>
+            <label>Data de Lançamento:</label>
             <input
               type="date"
               :min="new Date().toISOString().split('T')[0]"
@@ -351,33 +355,57 @@
               @input="imageName = $el.files[0].name"
             />
           </div>
-          <div class="flex h-full flex-col text-lg font-normal">
+          <div class="flex h-full flex-col px-12 text-lg font-normal">
             <label class="pb-2">Conteúdo:</label>
             <textarea
-              class="h-auto w-full resize-none"
+              class="h-[180px] w-full resize-none"
               placeholder="Digite o Comunicado aqui"
               name="info"
               required
             ></textarea>
           </div>
-          <div class="flex justify-center pt-3">
+          <div class="flex items-center gap-1 px-12 text-lg font-normal">
+            <label>Apenas para professores:</label>
+            <input type="checkbox" name="staff_only" />
+          </div>
+          <div class="flex flex-col px-12 text-lg font-normal">
+            <label>Para o curso:</label>
+            <input
+              type="text"
+              class="h-10"
+              name="course"
+              placeholder="Deixe em branco para um comunicado geral"
+            />
+          </div>
+          <div class="flex flex-col px-12 text-lg font-normal">
+            <label>Para a turma:</label>
+            <input
+              type="text"
+              class="h-10"
+              name="course"
+              placeholder="Deixe em branco para um comunicado geral"
+            />
+          </div>
+          <div class="flex justify-center pt-6">
             <button
               type="submit"
-              class="h-12 w-32 rounded-full border-2 border-solid border-color-secondary background bg-color-secondary-dimm text-2xl font-semibold text-color-secondary transition hover:bg-color-hover"
+              class="h-12 w-32 rounded-full border-2 border-solid border-color-secondary text-2xl font-bold text-color-secondary transition hover:bg-color-hover"
             >
               Aplicar
             </button>
           </div>
         </section>
       </div>
-      <!-- Fim Caixa de Diálogo-->
-
     </div>
   </div>
 
   <!-- Fim Provas Screen -->
 
     <div x-show.transition.in.opacity.duration.750ms="selected === 'option-3'" class="p-4">
+      Reposições
+    </div>
+
+    <div x-show.transition.in.opacity.duration.750ms="selected === 'option-4'" class="p-4">
       Plano de Ensino
     </div>
   </div>
