Showing the correct classes

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -4,6 +4,17 @@
 <title>Home</title>
 {% endblock %} {% block content %}
 <main class="m-8 mb-10 px-5">
+  <h1>
+    Segunda, 23 de outubro - GT2021
+  </h1>
+  <div>
+    <h2>
+      Próxima aula
+      <span>(13:00 - 13:50)</span>
+    </h2>
+    <p>Programação Mobile</p>
+    <p>Nelson</p>
+  </div>
   <div class="mt-10 flex justify-center md:mt-16">
     <div
       class="lg:h-[380px] lg:w-[460px] flex h-[300px] w-[360px] items-center justify-center"
@@ -76,6 +87,9 @@
       />
     </div>
   </div>
+
+  
+
   <h1
     class="mb-10 mt-6 text-center text-[40px] font-bold text-color-primary md:text-left"
   >
