Reset password have been worked!!!

--- a/core/templates/core/password/password_reset_complete.html
+++ b/core/templates/core/password/password_reset_complete.html
@@ -1,1 +1,12 @@
-<h1>AGORA VOCE PODE VOLTAR PARA A TELA DE LOGIN</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Solicitar Redefinição de Senha</title>
+</head>
+<body class="bg-gray-100">
+    <div class="container mx-auto p-8">
+        <h1 class="text-2xl font-semibold mb-4">Agora sua senha foi resetada :D</h1>
+    </div>
+</body>
+</html>
+
